[package]
name = "ran"
version = "0.1.4"
edition = "2021"
authors = ["Libor Spacek"]
description = """Simple, fast random numbers generation"""
readme = "README.md"
homepage = "https://github.com/liborty/random"
repository = "https://github.com/liborty/random"
license = "BSD-3-Clause"
keywords = ["random_numbers","generators","testing","XOR","shift"]
categories = ["algorithms","development-tools::testing","simulation","mathematics","science"]
include = [
    "src/*.rs",
    "tests/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE"
]
[badges]
maintenance = { status = "actively-developed" }
[lib]
[dependencies]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
